fix hboxes in Appendix A

--- a/powerops.tex
+++ b/powerops.tex
@@ -181,7 +181,7 @@ There is an isomorphism \[\Spf E^0 B\Sigma_j / I_{\Tr} \cong \Sub_j \CP^\infty_E
 \begin{theorem}[{\cite[pg.\ 45]{StricklandFPFP}}]
 For a finite abelian group $A$, there is a diagram
 \begin{center}
-\begin{tikzcd}
+\begin{tikzcd}[column sep=1em]
 \left.\Spf E^0 BA \middle/ \left( \sum_{\substack{a \in A \\ a \ne 0}} \operatorname{ann}(a) \right) \right. \arrow{r} \arrow[equal]{d} & \Spf E^0 BA / I_{\Tr} \arrow{r} & \Spf E^0 BA \arrow[equal]{d} \\
 \Level(A^*, \CP^\infty_E) \arrow{rr} & & \InternalHom{FormalGroups}(A^*, \CP^\infty_E),
 \end{tikzcd}
@@ -190,7 +190,7 @@ where \index{level structure}$\Level(A^*, \CP^\infty_E)$ denotes the subscheme o
 \end{theorem}
 
 \begin{remark}
-An important piece of intuition about the schemes $\Level(A^*, \CP^\infty_E)$ is that they form a kind of replacement for the nonexistent ``scheme of monomorphisms''.  Specifically, the $p$--series for a Lubin--Tate universal deformation group is only once $x$--divisible, and hence the divisor $\G[p]$ only contains the divisor $[0]$ with multiplicity one.\footnote{This kind of reasoning applies to domains of characteristic $0$ generally.}  This excludes noninjective morphisms in this case.  On the other hand, the only subgroups of the formal group restricted to the special fiber are of the form $p^m \cdot [0]$.  In particular, any level structure on $\G$ restricts to a morphism with this image divisor at the special fiber, and hence functoriality considerations force us to count these---which are \emph{not} images of monomorphisms---as level structures as well.
+An important piece of intuition about the schemes of level structures $\Level(A^*, \CP^\infty_E)$ is that they form a kind of replacement for the nonexistent ``scheme of monomorphisms''.  Specifically, the $p$--series for a Lubin--Tate universal deformation group is only once $x$--divisible, and hence the divisor $\G[p]$ only contains the divisor $[0]$ with multiplicity one.\footnote{This kind of reasoning applies to domains of characteristic $0$ generally.}  This excludes noninjective morphisms in this case.  On the other hand, the only subgroups of the formal group restricted to the special fiber are of the form $p^m \cdot [0]$.  In particular, any level structure on $\G$ restricts to a morphism with this image divisor at the special fiber, and hence functoriality considerations force us to count these---which are \emph{not} images of monomorphisms---as level structures as well.
 \end{remark}
 
 \begin{remark}[{\cite{StricklandFiniteSubgps}}]
@@ -470,7 +470,7 @@ Orientations $MU[6, \infty) \to E_\Gamma$ which are $H_\infty$ correspond to nor
 \begin{example}[{\cite[Sections 15-16]{AHSHinfty}}]
 Let $C_0$ be an elliptic curve over a perfect field of positive characteristic.  The \index{Serre--Tate theorem}Serre--Tate theorem says that the infinitesimal deformation theory of $C_0$ is naturally isomorphic to the infinitesimal deformation theory of its $p$--divisible group $C_0[p^\infty]$, and we let $C$ be the universally deformed elliptic curve.  Our discussion of norm-coherence for Lubin--Tate groups can be repeated almost verbatim for elliptic curves, and we note further that level structures on $\widehat C$ inject into level structures on $C$.
 
-We can apply these observations to $E_{\widehat C}$, the Morava $E$--theory for the formal group $\widehat C$, considered as an \index{elliptic spectrum}elliptic spectrum.  The natural orientation $MU[6, \infty) \to E_{\widehat C}$ from \Cref{EllipticSpectraAreOriented} is determined by the natural cubical structure on $\sheaf I(0)$, which by \Cref{Theta3IsTrivial} is \emph{uniquely} specified by the elliptic curve.  Our main new observation, then, is that the $N_\ell$ and $\psi_\ell^*$ constructions both convert this to a cubical structure on $C / \ell$, and hence are forced to agree by unicity.  In turn, it follows that the $\sigma$--orientation is a map of $H_\infty$ rings.
+We can apply these observations to $E_{\widehat C}$, the Morava $E$--theory for the formal group $\widehat C$, considered as an \index{elliptic spectrum}elliptic spectrum.  The natural orientation \[MU[6, \infty) \to E_{\widehat C}\] from \Cref{EllipticSpectraAreOriented} is determined by the natural cubical structure on $\sheaf I(0)$, which by \Cref{Theta3IsTrivial} is \emph{uniquely} specified by the elliptic curve.  Our main new observation, then, is that the $N_\ell$ and $\psi_\ell^*$ constructions both convert this to a cubical structure on $C / \ell$, and hence are forced to agree by unicity.  In turn, it follows that the $\sigma$--orientation is a map of $H_\infty$ rings.
 \end{example}
 
 \begin{remark}
@@ -645,7 +645,7 @@ For $p \ge 5$, the moduli $\moduli{ell}^{\ord}(p)$ is \emph{affine}. \qed
 \end{lemma}
 
 \begin{corollary}
-The associated $\theta$--algebra $W_1$ has vanishing Goerss--Hopkins--Miller obstruction groups, hence realizes uniquely to an ordinary $E_\infty$ ring spectrum $\TMF(p)^{\ord}$, and the action of $(\Z/p)^\times$ on the level structure enhances to a coherent $(\Z/p)^\times$--action on $\TMF(p)^{\ord}$. \qed
+Write $W_1$ for the associated $\theta$--algebra.  It has vanishing Goerss--Hopkins--Miller obstruction groups, hence realizes uniquely to an ordinary $E_\infty$ ring spectrum $\TMF(p)^{\ord}$, and the action of $(\Z/p)^\times$ on the level structure enhances to a coherent $(\Z/p)^\times$--action on $\TMF(p)^{\ord}$. \qed
 \end{corollary}
 
 We define $\TMF^{\ord}$, our candidate for $\Gamma(\sheaf O^{\ord})$, to be the $(\Z/p)^\times$--fixed points of $\TMF(p)^{\ord}$, and indeed its $p$--adic $K$--theory is $V^\wedge_\infty$.  More than this, it turns out that the $\theta$--algebra associated to any formal \'etale affine open of $\moduli{ell}^{\ord}$ has a unique realization \emph{as an algebra under $\TMF(p)^{\ord}$}, and maps between such also lift uniquely.  Altogether, this gives us the desired sheaf $\sheaf O^{\ord}$---and it shows that the potential complexity introduced by working with sheaves in an $\infty$--category does not arise in this case.
@@ -727,7 +727,7 @@ A topological enrichment can be thought of as an enhancement of a classical alge
 One of the main upsides of producing a topological enrichment is that it is naturally equipped with a spectral sequence computing the homotopy of its global sections, coming from recovering $\sheaf O(\stack N)$ as the homotopy limit of finer and finer covers of $\stack N$.
 
 \begin{lemma}
-For $\sheaf O$ a topological enrichment of an appropriate map $\stack N \to \moduli{fg}$, there is a spectral sequence \[\pushQED{\qed} E_2^{s, t} = H^s(\stack{N}; \pi_t \circ \sheaf O) \Rightarrow \pi_{t-s} \sheaf{O}(\stack{N}). \qedhere \popQED\]
+For $\sheaf O$ a topological enrichment of a map $\stack N \to \moduli{fg}$, there is a spectral sequence \[\pushQED{\qed} E_2^{s, t} = H^s(\stack{N}; \pi_t \circ \sheaf O) \Rightarrow \pi_{t-s} \sheaf{O}(\stack{N}). \qedhere \popQED\]
 \end{lemma}
 
 \begin{lemma}
@@ -831,7 +831,7 @@ hence $E_\infty(MG, R)$ appears as the fiber at $\gl_1 \eta_R$ of the restrictio
 \end{proof}
 
 \begin{corollary}[{\cite[Section 2.3]{AHR}}]
-The mapping set $E_\infty(Mj, R)$ is nonempty if and only if $\gl_1 \eta_R \circ j$ is null-homotopic.  If this is the case, then $E_\infty(Mj, R)$ is a torsor for $[\Susp g, \gl_1 R]$. \qed
+There exist $E_\infty$ maps $Mj \to R$ if and only if $\gl_1 \eta_R \circ j$ is null-homotopic.  If this is the case, then $E_\infty(Mj, R)$ is a torsor for $[\Susp g, \gl_1 R]$. \qed
 \end{corollary}
 
 Ando, Hopkins, and Rezk have used this presentation to understand the mapping space $E_\infty(M\String, \tmf)$.  In this Lecture, we will use this same technology to understand the mapping space $E_\infty(M\Spin, KO_{(p)})$, which proceeds along entirely similar lines but is a \emph{considerably} simpler computation.\footnote{Ando, Hopkins, and Rezk also do $E_\infty(M\Spin, KO)$ as a warm-up computation~\cite[Section 7]{AHR}, and we are further $p$--localizing that result so as not to have to think about arithmetic fracture.  Working arithmetically globally should be an easy exercise for the reader.}  The approach to this computation is to mix the presentation above with \index{chromatic fracture}chromatic fracture applied to the target:
@@ -867,21 +867,21 @@ Let $v^k\co S^{2k} \to BU$ be the $k${\th} power of the class $\L$, so that it c
 
 Now we move away from $MU$.  There are three directions for generalization: connective orientations, real orientations, and non-complex targets.
 \begin{enumerate}
-\item Rationally, the analysis of Ando--Hopkins--Strickland identifies $[BU\<2k\>, \Q \otimes R]$ with $k$--variate symmetric multiplicative $2$--cocycles over $R$, every one of which arises as $\delta^1$ repeatedly applied to a univariate series.  In homotopy theoretic terms, this means that every $MU\<2k\>$--orientation of a rational spectrum factors through an $MU$--orientation.
+\item The rational analysis of Ando--Hopkins--Strickland identifies $[BU\<2k\>, \Q \otimes R]$ with $k$--variate symmetric multiplicative $2$--cocycles over $R$, every one of which arises as $\delta^1$ repeatedly applied to a univariate series.  In homotopy theoretic terms, this means that every $MU\<2k\>$--orientation of a rational spectrum factors through an $MU$--orientation.
 \item The cofiber sequence $kO \to kU \to \Susp^2 kO$ splits rationally, using the idempotents $\frac{1 \pm \chi}{2}$ on $kU$.  Accordingly, $MU$--orientations of rational spectra that factor through $MSO$--orientations have an invariance property under $\chi$: $-[-1](x) = x$, corresponding to the idempotent factor $+$.  This pattern continues for the characteristic series of connective orientations.
 \item This same cofiber sequence and idempotent splitting also tells us that rational $KU$--cohomology classes in the image of $KO$--cohomology are $\chi$--invariant, i.e., they belong to the $-$ factor.
 \end{enumerate}
 
 Our main example is the usual orientation $MU \to KU$ that selects the formal group law $x + y - xy$.  This is associated to the difference Thom class $x / (e^x - 1) = x / \exp_{\G_m}(x)$.  To make this difference $[-1]$--invariant (and hence give a complex-orientation of $KO$), we use the averaged exponential class $(e^{x/2} - 1) - (e^{-x/2} - 1)$.\footnote{Incidentally, this is equal to $2\operatorname{sinh}(x/2)$.}  In turn, we use the Lemma to calculate the behavior on homotopy of the associated orientation:\footnote{This comes out of applying $d\log$ to the fraction.}\index{Bernoulli!number} \[\frac{x}{e^{x/2} - e^{-x/2}} = \exp\left(-\sum_{k=2}^\infty \frac{B_k}{k} \cdot \frac{x^k}{k!}\right).\]  Finally, we calculate the effect of the orientation on the second half of the factorization \[MSU \to M\Spin \to KO,\] again using the relevant idempotent, which has the effect of halving the coefficients in the characteristic series: $-\frac{B_k}{2k}$.\footnote{While we're here, you might want to observe that elements in $[bu, \gl_1 R]$ push forward to elements in $[bu, \gl_1 \Q \otimes R]$ which do not disturb the denominators of the elements $t_k$.  (On the other hand, the ``Miller invariant'' associated to a rational ring spectrum is \emph{zero}, because arbitrary elements in $[bu, \gl_1 \Q \otimes R]$ can completely destroy the denominators.)}
 
-This discussion accounts for both $E_\infty(M\Spin, \Q \otimes KO)$ and $E_\infty(M\Spin, \Q \otimes KO_p)$: the set of rational characteristic series includes into the set of ad\`elic characteristic series as the subset with rational coefficients.
+This accounts for both $E_\infty(M\Spin, \Q \otimes KO)$ and $E_\infty(M\Spin, \Q \otimes KO_p)$: the set of rational characteristic series includes into the set of ad\`elic characteristic series as the subset with rational coefficients.
 
 
 
 
 \subsubsection{Finite place orientations}\label{FinitePlaceOrientationsSubsection}
 
-We want now to understand $E_\infty(M\Spin, KO_p)$ and its map to $E_\infty(M\Spin, \Q \otimes KO_p)$.  Here's the initial set-up:
+We want to understand $E_\infty(M\Spin, KO_p)$ and its map to $E_\infty(M\Spin, \Q \otimes KO_p)$.  Here's the initial set-up:
 \begin{center}
 \begin{tikzcd}[
 execute at end picture={
@@ -940,7 +940,7 @@ For each $d \ge 1$, the \index{Bousfield--Kuhn functor}\textit{Bousfield--Kuhn f
 \end{lemma}
 
 \begin{definition}[{\cite[Section 3]{RezkLogarithm}}]
-The natural equivalence $(\GL_1 R)[1, \infty) \to (\Loops^\infty R)[1, \infty)$ gives rise to a map $\ell$ as in the diagram
+The natural equivalence \[(\GL_1 R)[1, \infty) \to (\Loops^\infty R)[1, \infty)\] gives rise to a map $\ell$ as in the diagram
 \begin{center}
 \begin{tikzcd}
 & \Phi_d (\GL_1 R)[1, \infty) \arrow["\simeq"]{r} & \Phi_d (\Loops^\infty R)[1, \infty) \\
@@ -982,11 +982,11 @@ L_0 \gl_1 KO_p \arrow{rr} \arrow{ru}[description]{\ell_0} & & L_0 \widehat L_1 \
 The behavior of the back horizontal map is determined by Rezk's formula for the logarithm.  It acts by some nonzero number in every positive degree, hence the fiber has the form $\prod_{k=-\infty}^0 \Susp^{4k-1} H\Q$.  Since the front face is a fiber square, this is also a calculation of the fiber of the map in the Lemma statement.\footnote{As a corollary of this same method, the Rezk logarithm for $R = KU^\wedge_p$ gives an equivalence $\gl_1 KU^\wedge_p[3, \infty) \to KU^\wedge_p[3, \infty)$.  This was previously known by nonconstructive methods to Adams and Priddy~\cite[Corollary 1.4]{AdamsPriddy}.}
 \end{proof}
 
-As a consequence, we have identifications \[\gl_1 \eta_{KO_p} \circ j \in [\spin, \gl_1 KO_p] \cong [\spin, L_1 \gl_1 KO_p] \cong [\spin, \widehat L_1 \gl_1 KO_p].\]  A direct application of the Rezk logarithm replaces $\widehat L_1 \gl_1 KO_p$ with $KO_p$, and the $K(1)$--localization of $\spin$ recovers $\Susp^{-1} KO_p$.  Altogether, this identifies $\gl_1 \eta_{KO_p} \circ j$ with a point in the mapping set $[\Susp^{-1} KO_p, KO_p]$---and we mark this as a point where we would like to understand the space of $KO$--operations.
+As a consequence, we have identifications \[\gl_1 \eta_{KO_p} \circ j \in [\spin, \gl_1 KO_p] \cong [\spin, L_1 \gl_1 KO_p] \cong [\spin, \widehat L_1 \gl_1 KO_p].\]  A direct application of the Rezk logarithm replaces $\widehat L_1 \gl_1 KO_p$ with $KO_p$, and the $K(1)$--localization of $\spin$ recovers $\Susp^{-1} KO_p$.  Altogether, this identifies \[\spin \xrightarrow{j} \gl_1 \S \xrightarrow{\gl_1 \eta_{KO_p}} \gl_1 KO_p\] with a point in the mapping set $[\Susp^{-1} KO_p, KO_p]$---and we mark this as a point where we would like to understand the space of $KO_p$--operations.
 
-We claim also that the kernel of the assignment $A \mapsto C$ is easy to understand: two fillers $A$ are related by an element of $[b\spin, \gl_1 KO_p]$, and their corresponding $C$s are related by the corresponding element of $[b\spin, \Q \otimes \gl_1 KO_p]$.  This set is rational, hence factors through the rationalization of $[b\spin, \gl_1 KO_p]$ where it must already be null, and hence it is a torsion element of $[b\spin, \gl_1 KO_p]$.  Meanwhile, the same argument as above identifies \[[b\spin, \gl_1 KO_p] = [KO_p, KO_p],\] which we mark as a second point where we would like to understand the space of $KO$--operations.  In particular, if we were to find the group of degree-preserving $KO$--operations to be torsion-free, then the assignment $A \mapsto C$ would be \emph{injective}.
+We claim also that the kernel of the assignment $A \mapsto C$ is easy to understand: two fillers $A$ are related by an element of $[b\spin, \gl_1 KO_p]$, and their corresponding $C$s are related by the corresponding element of $[b\spin, \Q \otimes \gl_1 KO_p]$.  This set is rational, hence factors through the rationalization of $[b\spin, \gl_1 KO_p]$ where it must already be null, and hence it is a torsion element of $[b\spin, \gl_1 KO_p]$.  Meanwhile, the same argument as above identifies \[[b\spin, \gl_1 KO_p] = [KO_p, KO_p],\] which we mark as a second point where we would like to understand the space of $KO_p$--operations.  In particular, if we were to find the group of degree-preserving $KO_p$--operations to be torsion-free, then the assignment $A \mapsto C$ would be \emph{injective}.
 
-We would like to understand the behavior of $C$ on homotopy based on some data about $A$.  This serves two purposes: there is the necessary condition that the triangle formed by $C$ and the canonical map $b\spin \to \Q / \Z \otimes \gl_1 KO_p$ commute, and then also the composite \[b\spin \xrightarrow{C} \Q \otimes \gl_1 KO_p \to (\gl_1 (\Q \otimes KO_p))[1, \infty)\] describes the map into the ad\`elic component.  In order to gain access to $C$, first notice that we can postcompose $B$ with the localization map off of $\gl_1 KO_p$ as in \Cref{MainAHRDiagram}.\footnote{Importantly, and differently from what every source says, this isn't a map of cofiber sequences and so there is no commuting map with signature $\widehat L_1 b\spin \to \Q \otimes \widehat L_1 \gl_1 KO_p$.}  This gives a new map $B'\co KO_p \to KO_p$---a third reason to understand $KO$--operations.
+We would like to understand the behavior of $C$ on homotopy based on some data about $A$.  This serves two purposes: there is the necessary condition that the triangle formed by $C$ and the canonical map $b\spin \to \Q / \Z \otimes \gl_1 KO_p$ commute, and then also the composite \[b\spin \xrightarrow{C} \Q \otimes \gl_1 KO_p \to (\gl_1 (\Q \otimes KO_p))[1, \infty)\] describes the map into the ad\`elic component.  In order to gain access to $C$, first notice that we can postcompose $B$ with the localization map off of $\gl_1 KO_p$ as in \Cref{MainAHRDiagram}.\footnote{Importantly, and differently from what every source says, this isn't a map of cofiber sequences and so there is no commuting map with signature $\widehat L_1 b\spin \to \Q \otimes \widehat L_1 \gl_1 KO_p$.}  This gives a new map $B'\co KO_p \to KO_p$---a third reason to understand $KO_p$--operations.
 
 We are now in a position to compute the action of $C$ on a homotopy class in $\pi_* b\spin$ by chasing through the following steps:
 \begin{enumerate}
@@ -1041,7 +1041,7 @@ We have thus identified the legal fillers $C$ as those sequences of rational num
 \subsubsection{Stable $KO$ operations}
 \newcommand{\cts}{\mathrm{cts}}
 
-We have identified three points where we want to understand the collection of stable $KO$ operations.  Although much of the main text of this book has been concerned with this sort of subject, this does not appear to be so immediately accessible: we want operations rather than cooperations, and $KO$ is \emph{not} a complex-orientable ring spectrum.  It is close to one, though, and we gain access to it through familiar approximation.
+We have identified three points where we want to understand the collection of stable $KO_p$ operations (which we will abbreviate to $KO$, since in this subsection we are concerned only with the $p$--adic case).  Although much of the main text of this book has been concerned with this sort of subject, this does not appear to be so immediately accessible: we want operations rather than cooperations, and $KO$ is \emph{not} a complex-orientable ring spectrum.  It is close to one, though, and we gain access to it through familiar approximation.
 
 The easy initial calculation is the continuous $p$--adic $K$--homology $K^\vee K$ can be computed to be $K^\vee K = \CatOf{Spaces}(\Z_p^\times, \Z_p)$, the ring of $\Z_p$--valued functions\footnote{\emph{Functions}, not homomorphisms!} on $\Z_p^\times$ which are continuous for the adic topologies on the domain and the target.  This comes out of the stable cooperations of \index{Landweber flat}Landweber flat homology theories discussed in \Cref{DefnChromaticHomologyThys}, where we showed that $E_\Gamma$ has cooperations given by the ring of functions on the pro-\'etale group scheme $\Aut \Gamma$.  For $\Gamma = \G_m$, this group scheme $\Aut \G_m$ is constant at $\Z_p^\times$, so that $K^\vee K$ is the ring of $\Z_p$--valued functions on $\Z_p^\times$.  Turning to cohomology, it follows by the universal coefficient spectral sequence that $K^0 K = \Hom(\CatOf{Spaces}(\Z_p^\times, \Z_p), \Z_p)$ and that $K^1 K = 0$.  These correspondences behave as follows:
 \begin{enumerate}
@@ -1056,11 +1056,11 @@ For any $N \ge 0$, the assignment \[\Hom(\CatOf{Spaces}(\Z_p^\times, \Z_p), \Z_p
 \end{lemma}
 
 \begin{remark}
-An interesting feature of the Lemma is the auxiliary index $N$, which is \emph{not} part of the property of being K\"ummer.  In $p$--adic geometry, this is reflected by the $p$--adic convergence of the sequence \[d + (p-1)p^r \xrightarrow{r \to \infty} d,\] and hence the continuous reconstruction property \[x_d = \lim_{r \to \infty} x_{d + (p-1)p^r}.\]  In homotopy theory, this is reflected by the reconstruction property $K \sm K[2k, \infty) \simeq K \sm K$.
+An interesting feature of the Lemma is the auxiliary index $N$, which is \emph{not} part of the property of being K\"ummer.  In $p$--adic geometry, this is reflected by the $p$--adic convergence of the sequence \[d + (p-1)p^r \xrightarrow{r \to \infty} d,\] and hence the continuous reconstruction property \[x_d = \lim_{r \to \infty} x_{d + (p-1)p^r}.\]  In homotopy theory, this is reflected by the reconstruction property \[K \sm K[2k, \infty) \simeq K \sm K.\]
 \end{remark}
 
 \begin{remark}
-With this computation in hand, the $p$--local operations $KU_{(p)} \sm KU_{(p)}$ can be recovered from arithmetic fracture, as can the global operations $KU \sm KU$.  The answer is quite similar: $\pi_0 KU \sm KU$ is populated by rational polynomials which evaluate to integers on all integer inputs, called \index{numerical polynomials}\textit{numerical polynomials}.
+With this computation in hand, the spectrum of $p$--local cooperations $KU_{(p)} \sm KU_{(p)}$ can be recovered from arithmetic fracture, as can the global operations $KU \sm KU$.  The answer is quite similar: $\pi_0 KU \sm KU$ is populated by rational polynomials which evaluate to integers on all integer inputs, called \index{numerical polynomials}\textit{numerical polynomials}.
 \end{remark}
 
 We now pass from $KU$ to $KO$.  To begin, use the \index{Tate vanishing}Tate trick
@@ -1070,7 +1070,12 @@ K \sm KO & \simeq K \sm (K^{hC_2}) \tag{$KO$ is a homotopy fixed point spectrum}
 & \simeq (K \sm K)_{hC_2} \tag{homotopy colimits pull past smash products} \\
 & \simeq (K \sm K)^{hC_2}, \tag{Tate objects vanish $K(1)$--locally}
 \end{align*}
-so that $\pi_0 K \sm KO = \CatOf{Spaces}(\Z_p^\times / C_2, \Z_p)$.  Taking fixed points again, we then also have $\pi_* KO \sm KO = \CatOf{Spaces}(\Z_p^\times / C_2, KO_*)$, and $KO^* KO$ is the $KO_*$--linear dual.  It follows that $[\Susp^{-1} KO, KO] = 0$ and that $[KO, KO] = \Hom(\CatOf{Spaces}(\Z_p^\times / C_2, \Z_p), \Z_p)$ is torsion-free, which account for our outstanding claims.
+so that $\pi_0 K \sm KO = \CatOf{Spaces}(\Z_p^\times / C_2, \Z_p)$.  Taking fixed points again, we then also have $\pi_* KO \sm KO = \CatOf{Spaces}(\Z_p^\times / C_2, KO_*)$, and $KO^* KO$ is the $KO_*$--linear dual.  From this we gain the computations
+\begin{align*}
+[\Susp^{-1} KO, KO] & = 0, &
+[KO, KO] & = \Hom(\CatOf{Spaces}(\Z_p^\times / C_2, \Z_p), \Z_p)
+\end{align*}
+We additionally see that $[KO, KO]$ torsion-free, which altogether accounts for all of our outstanding claims.
 
 
 \subsubsection{Mazur's construction of Kubota--Leopoldt $p$--adic $L$--functions}
@@ -1117,7 +1122,7 @@ The case of the orientation $M\String \to \tmf$ has all of the same trappings, b
     \item Begin with a rational orientation, which is basically the Witten genus valued in holomorphic expansions of modular forms.
     \item Analyze the homotopy type of $\widehat L_1 \tmf$ and compare it to that of $KO$.  This lets us use another universal coefficient theorem to lift our description of $KO^* KO$ as $KO^*$--valued measures to $(\widehat L_1 \tmf)^* KO$ as $\widehat L_1 \tmf^*$--valued measures.
     \item The homotopy type of $\widehat L_2 \tmf$ is ``naively irrelevant'' in the chromatic fracture square: maps $b\Spin \to \widehat L_2 \tmf$ factor through $\widehat L_2 b\Spin = \widehat L_2 KO_p = 0$.
-    \item However, the logarithm's presence in the chromatic fracture square $\widehat L_1 \tmf \to \widehat L_1 \widehat L_2 \tmf$ has a real effect that must be understood.  This is not easy: the height $2$ logarithm is not so accessible, so this requires a real understanding of power operations in $\tmf$.
+    \item However, the logarithm's presence in the chromatic fracture square \[\widehat L_1 \tmf \to \widehat L_1 \widehat L_2 \tmf\] has a real effect that must be understood.  This is not easy: the height $2$ logarithm is not so accessible, so this requires a real understanding of power operations in $\tmf$.
     \item You also have to calculate the Miller invariant associated to $\tmf$.  In the case of $E_\infty(M\Spin, KO)$, one uses the $A_\infty$ orientation $MU \to KU$, as well as a rational understanding of the maps $\pi_* BU \to \pi_* BO$ and $\pi_* KO \to \pi_* KU$, and one must replace each of these ingredients with $\tmf$ analogues.  The main point is that there are very few modular forms whose constant term is a given Bernoulli number\index{Bernoulli!number}.  There is an alternative approach, along the lines of Miller's original calculation~\cite{MillerBernoulliNos}, that takes as input a calculation of a certain $S^1$--transfer.\footnote{There is, supposedly, a further alternative approach that uses an $H_\infty$--orientation and tricks with the Bousfield--Kuhn functor to determine the Miller invariant, but I am unable to reconstruct this argument.}
     \item Finally, you have to ramp up the algebraic part of the calculation by identifying the analogues of the Mazur moments in $\pi_* \widehat L_1 \tmf$.  These turn out to be normalized \index{Eisenstein series}Eisenstein series.
 \end{enumerate}
