fix lots more xbox issues

--- a/mo.tex
+++ b/mo.tex
@@ -332,7 +332,7 @@ A $\mathbb G_m$--action on $\Spec R$ is equivalent data to a coaction map \[\alp
 
 This notion from algebraic geometry is somewhat different from what we are used to in algebraic topology, essentially because the algebraic topologist's ``cohomology ring'' is not \emph{really} a ring at all---one is only allowed to consider sums of homogeneous degree elements.  This restriction stems directly from the provenance of cohomology rings: recall that \[\HFtwo^n X := \pi_{-n} F(\Susp^\infty_+ X, \HFtwo).\]  One can only form sums internal to a \emph{particular} homotopy group, using the cogroup structure on $\S^{-n}$.  On the other hand, the most basic ring of algebraic geometry is the polynomial ring, and hence their notion is adapted to handle, for instance, the potential degree drop when taking the difference of two (nonhomogeneous) polynomials of the same degree.
 
-We can modify our perspective very slightly to arrive at the algebraic geometers', by replacing $\HFtwo$ with the \index{periodified spectrum}periodified spectrum \[\HFtwo P = \bigvee_{j=-\infty}^\infty \Susp^j \HFtwo.\]  This spectrum becomes a ring in the homotopy category\footnote{The precocious reader might like to know that $E_2$--ring spectra can be periodified but not generally more structured ring spectra than that.} by using the factorwise-defined multiplication maps \[\Susp^j \HFtwo \sm \Susp^k \HFtwo \simeq \Susp^{j+k} (\HFtwo \sm \HFtwo) \xrightarrow{\Susp^{j+k} \mu} \Susp^{j+k} \HFtwo.\]  This spectrum has the property that $\HFtwo P^0(X)$ is isomorphic to $\bigoplus_n \HFtwo^n(X)$ as ungraded rings, but now we can make topological sense of the sum of two classes which used to live in different $\HFtwo$--degrees.  At this point we can manually craft the desired coaction map $\alpha^*$ from \Cref{GradedAndGmEquivAgree}, but we will shortly find that algebraic topology gifts us with it on its own.
+We can modify our perspective very slightly to arrive at the algebraic geometers', by replacing $\HFtwo$ with the \index{periodified spectrum}periodified spectrum \[\HFtwo P = \bigvee_{j=-\infty}^\infty \Susp^j \HFtwo.\]  This spectrum becomes a ring in the homotopy category by using the factorwise multiplication maps \[\Susp^j \HFtwo \sm \Susp^k \HFtwo \simeq \Susp^{j+k} (\HFtwo \sm \HFtwo) \xrightarrow{\Susp^{j+k} \mu} \Susp^{j+k} \HFtwo.\]  This spectrum has the property that $\HFtwo P^0(X)$ is isomorphic to $\bigoplus_n \HFtwo^n(X)$ as ungraded rings, but now we can make topological sense of the sum of two classes which used to live in different $\HFtwo$--degrees.  At this point we can manually craft the desired coaction map $\alpha^*$ from \Cref{GradedAndGmEquivAgree}, but we will shortly find that algebraic topology gifts us with it on its own.
 
 Our route to finding this internally occurring $\alpha^*$ is by turning to the next supplementary structure: the action of the \index{Steenrod algebra}Steenrod algebra.  Naively approached, this does not fit into the framework we have been sketching so far: the Steenrod algebra arises as the homotopy endomorphisms of $\HFtwo$ and so is a \emph{noncommutative} algebra.  In turn, the action map
 \begin{center}
@@ -414,7 +414,7 @@ As group schemes, we have thus calculated \[\RP^\infty_{\HFtwo P} \cong \G_a.\]
 \end{example}
 
 \begin{example}\label{FirstAppearanceOfInternalAut}
-Noting the homomorphism condition appeaing in \Cref{SteenrodAlgIdentifiedWithAutGa}, we would like to connect $\Spec \mathcal AP_0$ with $\G_a$ more directly.  Toward this, we define a \index{mapping object}``hom functor''\footnote{We are careful to say ``functor'' here because it is \emph{not} generally another scheme.} for two formal schemes: \[\InternalHom{FormalSchemes}(X, Y)(T) = \left\{ (u, f) \middle| \begin{array}{c} u: \Spec T \to \Spec \F_2, \\ f: u^* X \to u^* Y \end{array}\right\}.\]  Restricting attention to homomorphisms, we see that a proper name for $\Spec \mathcal AP_0$ is \[\Spec \mathcal AP_0 \cong \InternalAut \G_a.\]  To check this, consider a point $g \in (\Spec \mathcal AP_0)(T)$ for an $\F_2$--algebra $T$.  The $\F_2$--algebra structure of $T$ (which is uniquely determined by a property of $T$) gives rise to a map $u\co \Spec T \to \Spec \F_2$.  The rest of the data of $g$ gives rise to a power series in $T\ps{x}$ as in the proof of \Cref{SteenrodAlgIdentifiedWithAutGa}, which can be re-interpreted as an automorphism $g\co u^* \G_a \to u^* \G_a$ of formal group schemes.\footnote{This description, too, is sensitive to the difference between $\G_a$ and $\mathbb G_a$.  The scheme $\InternalEnd \mathbb G_a$ is populated by \emph{polynomials} satisfying a homomorphism condition, and essentially none of them have inverses.}
+Noting the homomorphism condition appeaing in \Cref{SteenrodAlgIdentifiedWithAutGa}, we would like to connect $\Spec \mathcal AP_0$ with $\G_a$ more directly.  Toward this, we define a \index{mapping object}``hom functor''\footnote{We are careful to say ``functor'' here because it is \emph{not} generally another scheme.} for two formal schemes: \[\InternalHom{FormalSchemes}(X, Y)(T) = \left\{ (u, f) \middle| \begin{array}{c} u: \Spec T \to \Spec \F_2, \\ f: u^* X \to u^* Y \end{array}\right\}.\]  Restricting attention to homomorphisms, we see that a name for $\Spec \mathcal AP_0$ is \[\Spec \mathcal AP_0 \cong \InternalAut \G_a.\]  To check this, consider a point $g \in (\Spec \mathcal AP_0)(T)$ for an $\F_2$--algebra $T$.  The $\F_2$--algebra structure of $T$ (which is uniquely determined by a property of $T$) gives rise to a map $u\co \Spec T \to \Spec \F_2$.  The rest of the data of $g$ gives rise to a power series in $T\ps{x}$ as in the proof of \Cref{SteenrodAlgIdentifiedWithAutGa}, which can be re-interpreted as an automorphism $g\co u^* \G_a \to u^* \G_a$ of formal group schemes.\footnote{This description, too, is sensitive to the difference between $\G_a$ and $\mathbb G_a$.  The scheme $\InternalEnd \mathbb G_a$ is populated by \emph{polynomials} satisfying a homomorphism condition, and essentially none of them have inverses.}
 \end{example}
 
 \begin{remark}\label{AutGaHasStableCoopns}
@@ -687,7 +687,7 @@ Our first step toward this is the following calculation:
 The natural map \[\Sym \widetilde{\HFtwo P}_0(BO(1)) \to \HFtwo P_0(BO).\] induces a map \[\Sym \widetilde{\HFtwo P}_0(BO(1)) = \frac{\Sym \HFtwo P_0(BO(1))}{\beta_0 = 0} \xrightarrow{\simeq} \HFtwo P_0(BO)\] which is an isomorphism of Hopf algebras and of comodules for the dual Steenrod algebra.
 \end{lemma}
 \begin{proof}
-This follows from a combination of standard facts about \index{Stiefel--Whitney class}Stiefel--Whitney classes.  First, these classes generate the cohomology ring $\HFtwo P^0 BO(n)$~\cite[Theorem 16.10]{Switzer}: \[\HFtwo P^0 BO(n) \cong \F_2\ps{w_1, \ldots, w_n}.\]  Then, the total Stiefel--Whitney class $w(V) = \sum_j w_j(V) t^j$ is exponential~\cite[Theorem 16.3]{Switzer}, in the sense that \[w(V \oplus W) = w(V) \cdot w(W).\]  It follows that the natural map \[\HFtwo P^0 BO(n) \xrightarrow{\bigoplus_{j=1}^n \L_j} \HFtwo P^0 BO(1)^{\times n} \cong (\HFtwo P^0 BO(1))^{\otimes n}\] is the inclusion of the symmetric polynomials, by calculating the total Stiefel--Whitney class \[w\left( \bigoplus_{j=1}^n \L_j \right) = \prod_{j=1}^n (1 + w_1(\L_j)) = \sum_{j=0}^n \sigma_j(w_1(\L_1), \ldots, w_1(\L_n)) t^j.\]  Dually, the homological map \[(\HFtwo P_0 BO(1))^{\otimes n} \to \HFtwo P_0 BO(n)\] is surjective, modeling the quotient from the tensor product to the symmetric tensor product.  Stabilizing as $n \to \infty$, we recover the statement of the Lemma.
+This follows from several standard facts about \index{Stiefel--Whitney class}Stiefel--Whitney classes.  First, these classes generate the cohomology ring $\HFtwo P^0 BO(n)$~\cite[Theorem 16.10]{Switzer}: \[\HFtwo P^0 BO(n) \cong \F_2\ps{w_1, \ldots, w_n}.\]  Then, the total Stiefel--Whitney class $w(V) = \sum_j w_j(V) t^j$ is exponential~\cite[Theorem 16.3]{Switzer}, in the sense that \[w(V \oplus W) = w(V) \cdot w(W).\]  It follows that the natural map \[\HFtwo P^0 BO(n) \xrightarrow{\bigoplus_{j=1}^n \L_j} \HFtwo P^0 BO(1)^{\times n} \cong (\HFtwo P^0 BO(1))^{\otimes n}\] is the inclusion of the symmetric polynomials, by calculating the total Stiefel--Whitney class \[w\left( \bigoplus_{j=1}^n \L_j \right) = \prod_{j=1}^n (1 + w_1(\L_j)) = \sum_{j=0}^n \sigma_j(w_1(\L_1), \ldots, w_1(\L_n)) t^j.\]  Dually, the homological map \[(\HFtwo P_0 BO(1))^{\otimes n} \to \HFtwo P_0 BO(n)\] is surjective, modeling the quotient from the tensor product to the symmetric tensor product.  Stabilizing as $n \to \infty$, we recover the statement of the Lemma.
 \end{proof}
 
 With this in hand, we now turn to the homotopy ring $\HFtwo P_0 MO$.  There are two equivalences that we might consider employing.  We have the Thom isomorphism:
