--- a/sigma.tex
+++ b/sigma.tex
@@ -124,7 +124,7 @@ We show that the first two objects, $D\G$ and $\mathbb H$, represent the same ob
 \end{proof}
 
 \begin{remark}[{\cite[pg.\ 72]{Demazure}}]
-The effect of Cartier duality on the \index{Dieudonn\'e module}Dieudonn\'e module of a formal group is \emph{also} described by linear duality.  Hence, the covariant and contravariant Dieudonn\'e modules described in \Cref{SectionDieudonneModules} can be taken to be related by Cartier duality.
+The \index{Dieudonn\'e module}Dieudonn\'e module of the Cartier dual of a formal group is \emph{also} described by linear duality: it is the linear dual of the Dieudonn\'e module of the original formal group.  Hence, the covariant and contravariant Dieudonn\'e modules described in \Cref{SectionDieudonneModules} can be taken to be related by Cartier duality.
 \end{remark}
 
 \begin{remark}\label{TopologicalCartierDuality}
@@ -846,7 +846,7 @@ where the horizontal maps are the action maps defining torsors and the vertical 
 \end{lemma}
 
 \begin{corollary}\label{BU6Triumvirate}
-Take $E$ to be \emph{complex--orientable}.  The functor $C^3(\CP^\infty_E; \sheaf I(0))$ is isomorphic to the affine scheme $\Spec E_0 MU[6, \infty)$.  Moreover, the $E_0$--points of this scheme biject with ring spectrum maps $MU[6, \infty) \to E$.\index{orientation!MU six@$MU[6, \infty)$} \qed
+Take $E$ to be \emph{complex--orientable}.  There is then an isomorphism \[C^3(\CP^\infty_E; \sheaf I(0)) \cong \Spec E_0 MU[6, \infty).\]  Moreover, the $E_0$--points of this scheme biject with ring spectrum maps\index{orientation!MU six@$MU[6, \infty)$} \[\pushQED{\qed}MU[6, \infty) \to E. \qedhere\popQED\]
 \end{corollary}
 
 \begin{lemma}\label{MSUToMU6}
@@ -875,7 +875,7 @@ The case $k = 3$ requires a small modification, to cope with the two classes of 
 \end{proof}
 
 \begin{theorem}[Ando--Hopkins--Strickland, unpublished]
-The scheme $C_3 \CP^\infty_E$ exists, and it is modeled by $BU[6, \infty)_E$.
+For $E$ an even and periodic cohomology theory, $BU[6, \infty)_E$ models the scheme $C_3 \CP^\infty_E$.
 \end{theorem}
 \begin{proof}[Proof sketch]
 Let $\G$ be an arbitrary formal group.  Note first that if $C^3(\G; \Gm)$ is \index{formal scheme!coalgebraic}coalgebraic, then $C_3 \G$ exists and is its \index{formal group!Cartier dual}Cartier dual: the diagram presenting $\sheaf OC^3(\G; \Gm)$ as a reflexive coequalizer of free Hopf algebras is also the diagram meant to present $C_3 \G$ as a coalgebraic formal scheme.  So, if the coequalizing Hopf algebra has a good basis, it will follow from \Cref{CoalgebraicColimitsExist} that the resulting diagram is a colimit diagram in formal schemes, with $C_3 \G$ sitting at the cone point.  It will additionally follow that the isomorphism \[\Spec E_0 BU[6, \infty) \xrightarrow{\cong} C^3(\CP^\infty_E; \Gm)\] of \Cref{Pi3ForCplxOrientableE} will re-dualize to an isomorphism \[BU[6, \infty)_E \xleftarrow{\cong} C_3 \CP^\infty_E.\]  So, we reduce to checking that $\sheaf O C^3(\G; \Gm)$ admits a good basis.  By a base change argument, it suffices to take $\G$ to be the universal formal group over $\sheaf O_{\moduli{fgl}}$, and we thus set about finding a nice basis for that.
@@ -1508,7 +1508,7 @@ This, finally, makes explicit use of height $1$ and $2$ formal group laws.  The 
 
 \begin{figure}
 \centering
-\begin{tikzpicture}[node distance=2.2em]
+\begin{tikzpicture}[node distance=2.15em]
 \fill node[circle,draw=black] (1-2) {2};
 \fill node[draw, right of=1-2] (1-3) {3};
 \fill node[circle,draw=black, right of=1-3] (1-4) {4};
