--- a/cooperations.tex
+++ b/cooperations.tex
@@ -538,7 +538,7 @@ Write $I = ([p], [v_1], [v_2], \ldots)$, and work in $Q^* \AA(H, BP) / I^{\circ 
 Since the group law on $\CP^\infty_H$ is additive, the \index{Ravenel--Wilson relation}Ravenel--Wilson relation applied to the $p$--series\footnote{We are very sorry for the collision of $[p]_{BP}$ the $p$--series and $[p]$ the symbol in the Hopf ring induced from $p \in BP_0$.  The $p$--series won't linger, and we will always differentiate them with a subscript.} specializes to \[[p]_{[BP]}(\beta(s)) = \beta(ps).\]  If we work over the square-zero part of $BP_*$ to simplify its group law, we have the relation \[[p]_{BP}(s) \equiv \sum_{j \ge 0} v_j s^{p^j} \pmod{(p, v_1, v_2, \ldots)^2},\] which combines with the above to give \[\beta_0 = [p]_{[BP]}(\beta(s)) \equiv \bigast_{j \ge 0} ([v_j] \circ \beta(s)^{\circ p^j}) \pmod{I^{\circ 2}}.\]  Passing to $Q^*$, we have $[p] \circ \beta(s) \equiv \beta_0$ and hence \[0 \equiv \sum_{j > 0} [v_j] \circ \beta(s)^{\circ p^j}.\]  The coefficient of $s^{p^n}$ gives the identity claimed.
 \end{proof}
 
-Let $r_n$, the $n${\th} relation, denote the same sum taken in $A$ instead: \[r_n := \sum_{i=1}^n [v_i] \circ \beta_{(n-i)}^{\circ p^i} \in A.\]  The Lemma then shows that the image of $r_n$ in $Q^* \AA(H, BP)$ is a $\circ$--decomposable element.  Our goal is to show that enforcing these relations cuts $A$ down to exactly the right size, and the easiest way to track the size of a quotient is for the quotient to be by a regular ideal.
+Let $r_n$, the $n${\th} relation, denote the same sum taken in $A$ instead: \[r_n := \sum_{i=1}^n [v_i] \circ \beta_{(n-i)}^{\circ p^i} \in A.\]  The Lemma then shows that the image of $r_n$ in $Q^* \AA(H, BP)$ is $\circ$--decomposable.  Our goal is to show that enforcing these relations cuts $A$ down to exactly the right size, and the easiest way to track the size of a quotient is for the quotient to be by a regular ideal.
 
 \begin{lemma}[{\cite[Lemma 4.15.b]{RavenelWilsonHopfRingForMU}}]
 The sequence $(r_1, r_2, \ldots)$ is regular in $A$.
@@ -990,7 +990,7 @@ then $H(n) = \F_p[x_0, x_1, \ldots, x_k]$ with the Witt vector diagonal, i.e., t
 \end{theorem}
 
 \begin{corollary}
-The category $\CatOf{GradedHopfAlgebras}^{> 0, \fin}_{\F_p/}$ of finite--type graded connected Hopf $\F_p$--algebras is a full subcategory of modules over \[\bigoplus_{n, m} \CatOf{GradedHopfAlgebras}(H(n), H(m)).\]
+The category $\CatOf{GradedHopfAlgebras}^{> 0, \fin}_{\F_p/}$ of finite-type graded connected Hopf $\F_p$--algebras is a full subcategory of modules over \[\bigoplus_{n, m} \CatOf{GradedHopfAlgebras}(H(n), H(m)).\]
 \end{corollary}
 \begin{proof}[Proof sketch]
 This is a general nonsense consequence of having found a set of projective generators.  The functor presenting the inclusion is \[M \mapsto \bigoplus_{n=0}^\infty \CatOf{GradedHopfAlgebras}(H(n), M),\] and since this functor is corepresented its automorphisms are encoded by the indicated ring.
